--- a/frontend/src/app/components/post-card/post-card.component.html
+++ b/frontend/src/app/components/post-card/post-card.component.html
@@ -6,6 +6,7 @@
     </h5>
       <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
       <p class="card-text">{{entrada.content}}</p>
+      <img src="{{entrada.image_name}}" width="300px" alt="">
       <a href="#" class="card-link">Card link</a>
       <a href="#" class="card-link">Another link</a>
     </div>
