--- a/frontend/src/app/components/posts/posts.component.html
+++ b/frontend/src/app/components/posts/posts.component.html
@@ -52,6 +52,7 @@
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" id="email" placeholder="email@gmail.com" formControlName="authorEmail">
               </div>
+              <input type="file" name = "image" (change)="onFileSelect($event)" />
               <button  class="btn btn-primary">Send</button>
 
         </form>
