--- a/frontend/src/app/components/post-card/post-card.component.html
+++ b/frontend/src/app/components/post-card/post-card.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="card" style="width: 18rem;">
+<div class="card">
     <div class="card-body">
       <h5 class="card-title">{{entrada.title}}
     </h5>
